--- a/dcos-green-app.json
+++ b/dcos-green-app.json
@@ -6,7 +6,7 @@
       "image": "chrisciborowski/dcos-green-app",
       "network": "BRIDGE",
       "portMappings": [
-        { "hostPort": 0, "containerPort": 5000, "servicePort": 10002 }
+        { "hostPort": 0, "containerPort": 5000, "servicePort": 10003 }
       ],
       "forcePullImage":true
     }
@@ -15,6 +15,8 @@
   "cpus": 0.1,
   "mem": 65,
   "labels":{
-    "HAPROXY_GROUP":"external"
+    "HAPROXY_GROUP":"external",
+    "HAPROXY_0_PORT":"80",
+    "HAPROXY_0_VHOST":"dcos-blue.nebulaworks.com"
   }
 }
